# Hephaestus

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .graphqlrc.yml  .npmrc  .readthedocs.yaml  .releaserc  .releaserc.json  .trivyignore  AGENTS.md  CHANGELOG.md  CI_ANALYSIS.md  CI_RUBRIC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MIGRATION.md  MISSION.md  README.md  SECURITY.md  STYLE_GUIDE.md  ai-chatbot.md  build_images.sh  commitlint.config.mjs  compose.yaml  jean.json  mprocs.yaml  openapitools.json  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.code-workspace  renovate.json  update_version.sh
.ai/: commit-context.md  (+5 more)
server/intelligence-service/: .dockerignore  .env.example  .env.test  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  TESTING_ASSESSMENT.md  TESTING_ASSESSMENT_UPDATE.md  biome.json  drizzle.config.ts  openapi.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.arch.ts  vitest.config.integration.ts  vitest.config.ts  vitest.config.unit.ts
server/intelligence-service/.chainlit/: config.toml
server/intelligence-service/app/: chainlit.py  config.py  export_openapi_specs.py  generate_openapi_yaml.py  logger.py  main.py  model.py  settings.py
server/intelligence-service/app/analysis/: analyzer.py  cache.py  config.py  infrastructure.py  interfaces.py  models.py  monitoring.py  throttling.py
server/intelligence-service/app/analyzer/: dimensions.py  review_quality_analyzer.py
server/intelligence-service/app/db/: __init__.py  config.py  models_gen.py  service.py
server/intelligence-service/app/detector/: bad_practice_detector.py
server/intelligence-service/app/mentor/: conditions.py  converter.py  mentor.py  models.py  nodes.py  persona_prompt.py  prompt_loader.py  response.py  router.py  run.py  state.py  streaming.py  tools.py  utils.py
server/intelligence-service/app/models/: __init__.py  azure_openai.py  fake.py  model_provider.py  ollama.py  openai.py
server/intelligence-service/app/routers/: __index__.py  analysis.py  analyzer.py  detector.py  health.py  mentor.py
server/intelligence-service/java-client/: README.md  build.gradle  build.sbt  pom.xml
server/intelligence-service/java-client/.openapi-generator/: FILES
server/intelligence-service/java-client/api/: openapi.yaml
server/intelligence-service/java-client/docs/: ChatRequest.md  ChatResponse.md  DefaultApi.md  ErrorResponse.md
server/intelligence-service/public/: custom.js  stylesheet.css  theme.json
server/intelligence-service/scripts/: ast-utils.ts  db-introspect.sh  export-openapi.ts  generate_db_models.py  import-prompts.ts  post-introspect.ts  prompts.ts  sync-prompts.ts  test-mentor.ts
server/intelligence-service/src/: app.ts  config.py  env.ts  index.ts  instrumentation.ts  langchain_client.py  logger.ts  main.py
server/intelligence-service/src/auth/: router.py
server/intelligence-service/src/db/: relations.ts  schema.ts
server/intelligence-service/src/detector/: bad-practice.prompt.ts  detector.handler.ts  detector.routes.ts  detector.schema.ts  index.ts  prompts.ts
server/intelligence-service/src/lib/: ai-model.ts  configure-open-api.ts  constants.ts  create-app.ts  db-utils.ts  issue-repo.ts  langfuse.ts  telemetry.ts  typed.ts  types.ts
server/intelligence-service/src/mentor/: chat.prompt.ts  register.ts
server/intelligence-service/src/middlewares/: pino-logger.ts  workspace-context.ts
server/intelligence-service/src/prompts/: README.md  index.ts  loader.ts  types.ts
server/intelligence-service/src/routes/: index.route.ts
server/intelligence-service/src/services/: langchain_client.py
server/intelligence-service/src/shared/: constants.ts  document.ts  tool-call-id.ts
server/intelligence-service/test/: architecture.arch.test.ts  architecture.test.ts  global-setup.ts  mentor-chat.test.ts  setup.ts
server/intelligence-service/test/architecture/: architecture.arch.test.ts
server/intelligence-service/test/chat/: chat-shared.test.ts  edge-cases.test.ts  transformer.test.ts
server/intelligence-service/test/detector/: detector.integration.test.ts  detector.test.ts
server/intelligence-service/test/documents/: documents-data.integration.test.ts  documents-data.test.ts  documents.integration.test.ts  documents.test.ts
server/intelligence-service/test/integration/: chat-api.integration.test.ts  chat-data.integration.test.ts  chat-handler.integration.test.ts  chat-persistence.integration.test.ts  concurrent-operations.integration.test.ts  (+2 more)
server/intelligence-service/tests/: test_chat.py  test_main.py
server/webhook-ingest/: .dockerignore  .env.example  .env.test  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  compose.yaml  nats-server.conf  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
server/webhook-ingest/app/: config.py  logger.py  main.py  nats_client.py
server/webhook-ingest/src/: app.ts  env.ts  index.ts  logger.ts
(+10891 files in other folders)
