[project]
name = "intelligence-service"
version = "0.0.1"
description = "A FastAPI service for interfacing with machine learning models."
authors = [
    { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"},
    { name = "milenasrb", email = "mi.serbinova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "fastapi[standard] == 0.115.6",
    "pydantic-settings == 2.6.1",
    "langchain == 0.3.10",
    "langchain-openai == 0.2.11",
    "langgraph == 0.2.56",
    "langchain-community == 0.3.10",
    "langgraph-checkpoint-postgres (>=2.0.8,<3.0.0)",
    "langchain-postgres (>=0.0.12,<0.1.0)",
    "psycopg-pool (>=3.2.4,<4.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "psycopg[binary,c] (>=3.2.4,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "24.10.0"

[virtualenvs]
create = true
in-project = true
path = "./.venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"