[project]
name = "intelligence-service"
version = "0.10.0-rc.9"
description = "A FastAPI service for interfacing with machine learning models."
authors = [
    { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"},
    { name = "milenasrb", email = "mi.serbinova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

dependencies = [
    "fastapi[standard] == 0.116.1",
    "pydantic-settings == 2.10.1",
    "langchain == 0.3.27",
    "langchain-core == 0.3.74",
    "langchain-openai == 0.3.28",
    "langchain-ollama == 0.3.6",
    "langchain-community == 0.3.27",
    "langchain-postgres == 0.0.15",
    "langgraph == 0.6.4",
    "langgraph-checkpoint-postgres == 2.0.23",
    "langsmith == 0.4.13",
    "langfuse == 2.59.6",
    "psycopg-pool == 3.2.6",
    "ipython == 8.31.0",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "sqlacodegen == 3.0.0",
    "python-dotenv == 1.0.1",
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
openapi = "app.export_openapi_specs:run"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.2.0"
mypy = "^1.16.1"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"