[project]
name = "webhook-ingest"
version = "0.10.0-rc.22"
description = "A FastAPI service for ingesting GitHub webhooks and publishing events to NATS JetStream."
authors = [
  { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

dependencies = [
  "fastapi[standard] == 0.115.6",
  "nats-py == 2.8.0",
  "pydantic == 2.10.6",
  "pydantic-settings == 2.6.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.2.0"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
